fix: decrease cumulative layout shift
*Changed pages height for decrease CLS

--- a/src/pages/HomePage/ui/HomePage.module.scss
+++ b/src/pages/HomePage/ui/HomePage.module.scss
@@ -5,7 +5,7 @@
   padding: 3.75rem;
   gap: 3.75rem;
   width: 100%;
-  min-height: calc(100dvh - 10rem);
+  min-height: 100dvh;
   background-color: $color-background-main;
   @include scrollbar($color-scrollbar, 2px, 2px, $color-scrollbar-track);
 }
