--- a/src/pages/MoviesIdPage/ui/MoviesIdPage.module.scss
+++ b/src/pages/MoviesIdPage/ui/MoviesIdPage.module.scss
@@ -5,5 +5,5 @@
   padding: 3.75rem;
   gap: 3.75rem;
   width: 100%;
-  min-height: calc(100dvh - 10rem);
+  min-height: 100dvh;
 }
