--- a/src/pages/MoviesPage/ui/MoviesPage.module.scss
+++ b/src/pages/MoviesPage/ui/MoviesPage.module.scss
@@ -5,7 +5,7 @@
   padding: 2rem 3.75rem;
   gap: 4.375rem;
   width: 100%;
-  min-height: calc(100dvh - 10rem);
+  min-height: 100dvh;
   overflow: hidden;
 
   @media screen and (width < 800px) {
